# SlimEngineCpp

./: .gitignore  CMakeLists.txt  README.md
src/: SlimEngine.h  SlimEngineCpp.h  bmp2image.cpp  bmp2texture.cpp  obj2mesh.cpp  slim.h
src/Slim3D/: app.h
src/Slim3D/core/: base.h  types.h
src/Slim3D/math/: mat3.h  mat4.h  vec3.h  vec4.h
src/Slim3D/renderer/: common.h  mesh_shaders.h  pixel_shaders.h  rasterizer.h
src/Slim3D/scene/: camera.h  cube.h  curve.h  grid.h  mesh.h  scene.h  texture.h
src/Slim3D/viewport/: hud.h
src/SlimEngineCpp/: app.h
src/SlimEngineCpp/core/: base.h  canvas.h  hud.h  mouse.h  ray.h  ray_rectangle.h  rectangle.h  string.h  transform.h  types.h
src/SlimEngineCpp/draw/: box.h  camera.h  curve.h  edge.h  grid.h  hud.h  line.h  mesh.h  number.h  rectangle.h  selection.h  text.h  triangle.h
src/SlimEngineCpp/math/: mat2.h  mat3.h  mat4.h  quat.h  utils.h  vec2.h  vec3.h  vec4.h
src/SlimEngineCpp/renderer/: common.h  mesh_shaders.h  pixel_shaders.h  rasterizer.h
src/SlimEngineCpp/scene/: box.h  camera.h  edge.h  grid.h  mesh.h  scene.h  selection.h  texture.h
src/SlimEngineCpp/serialization/: mesh.h
src/SlimEngineCpp/viewport/: canvas.h  frustum.h  hud.h  navigation.h  viewport.h
src/examples/: 0_barebone.cpp  1_viewport.cpp  2_navigation.cpp  3_cameras.cpp  4_shapes.cpp  5_manipulation.cpp  6_mesh.cpp  7_scene.cpp  AL_task.cpp  ClosestPointOnMesh.cpp  ClosestPointOnMesh.h  ClosestPointOnMesh.hpp  ClosestPointOnMeshApp.cpp  ClosestPointOnMeshApp.cu  ClosestPointOnMeshApp.hpp  ClosestPointOnMeshCPU.hpp  ClosestPointOnMeshGPU.hpp  ClosestPointOnMeshXPU.hpp  ClosestPointOnTriangle.hpp  DemoApp.cpp  _common.h  cube.mesh  dog.mesh  suzanne.mesh  this.scene
src/slim/: app.h
src/slim/core/: base.h  canvas.h  hud.h  ray.h  string.h  texture.h  transform.h
src/slim/draw/: box.h  bvh.h  camera.h  canvas.h  circle.h  curve.h  edge.h  grid.h  hud.h  image.h  line.h  mesh.h  number.h  rectangle.h  rtree.h  selection.h  text.h  texture.h  triangle.h
src/slim/math/: mat2.h  mat3.h  mat4.h  quat.h  utils.h  vec2.h  vec3.h  vec4.h
src/slim/scene/: bvh.h  bvh_builder.h  camera.h  grid.h  mesh.h  rtree.h  rtree_builder.h  scene.h  selection.h
src/slim/serialization/: bvh.h  image.h  mesh.h  rtree.h  scene.h  texture.h
src/slim/viewport/: frustum.h  navigation.h  viewport.h
